--- a/html/extension.html
+++ b/html/extension.html
@@ -23,9 +23,9 @@
         <div id="aui-slide3">
             <div class="aui-slide-wrap">
                 {{#each banners}}
-                <a href="goodsdetail.html?productId={{id}}" class="display-box">
+                <a href="javascript:;" class="display-box">
                     <div class="aui-slide-node bg-dark">
-                        <img src="{{mainImageUrl}}" />
+                        <img src="{{url}}" />
                     </div>
                 </a>
                 {{/each}}
