--- a/html/index.html
+++ b/html/index.html
@@ -165,10 +165,10 @@
 <!--搜索模板-->
 <script type="text/x-handlebars-template" id="discount-list-template">
     {{#each products}}
-    <a href="red_package.html?productId={{id}}" class="display-box">
+    <a href="javascript:;" class="display-box">
         <div class="dis-list-box">
             <div class="dis-shop-img">
-                <img src="../img/lazy.gif" data-src={{mainImageUrl}} alt="">
+                <img src="../images/lazy.gif" data-src={{mainImageUrl}} alt="">
             </div>
             <div class="dis-list-content">
                 <div class="dis-shop-detail">
