--- a/html/commodity.html
+++ b/html/commodity.html
@@ -111,7 +111,7 @@
         <section class="wxmass-sends-item">
             <div class="wxmass-item-title">
                 <span class="cancel">取消</span>
-                <span>共9张</span>
+                <span>分享</span>
 
             </div>
             <div class="wxmass-item-img">
