--- a/html/my.html
+++ b/html/my.html
@@ -60,7 +60,7 @@
                         <div class="four"></div>
                         <div>
                             <span class="cd e9-color">累计收益</span><br>
-                            <span>{{totalProfit}}</span>
+                            <span>{{money}}</span>
                         </div>
 
                     </li>
