--- a/html/myShop.html
+++ b/html/myShop.html
@@ -113,9 +113,9 @@
                 <span>分享</span>
 
             </div>
-            <div class="wxmass-item-img">
+            <!--<div class="wxmass-item-img">
                 <img src="../images/banner1.png" alt="">
-            </div>
+            </div>-->
             <ul class="wxmass-item-list">
                 <li class="share-firends">
                     <div class="wxmass-item-list-img">
