--- a/html/my.html
+++ b/html/my.html
@@ -93,14 +93,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="set.html" class="display-box">
-                        设置
+                    <a href="aboutus.html" class="display-box">
+                        关于我们
                     </a>
                 </li>
                 <li class="bind-tel-box">
                     <a href="bindingtel.html" class="display-box">
                         <i>绑定手机号</i>
                         <span style="padding-left: 5rem;">{{userPhone}}</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="set.html" class="display-box">
+                        设置
                     </a>
                 </li>
             </ul>
