--- a/html/extension.html
+++ b/html/extension.html
@@ -121,6 +121,7 @@
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/config.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/aui-lazyload.js"></script>
 <script src="../js/function.js"></script>
 <script src="../js/scroll.js"></script>
 <script src="../js/api.2.0.js"></script>
