--- a/html/index.html
+++ b/html/index.html
@@ -122,7 +122,7 @@
         {{#productdetail}}
         <a href="goodsdetail.html?productId={{../spuId}}" class="display-box">
             <div class="home-three-box">
-                <img src="../img/lazy.gif" data-src="{{mainImageUrl}}" alt="">
+                <img src="../images/lazy.gif" data-src="{{mainImageUrl}}" alt="">
                 <div class="home-three-price">
                     <span>￥{{productPrice}}</span>
                     <span>￥{{productOrginPrice}}</span>
