修改云店首页为top123增加销量以及火1火2火3

--- a/html/index.html
+++ b/html/index.html
@@ -127,6 +127,11 @@
                     <span>￥{{productPrice}}</span>
                     <span>￥{{productOrginPrice}}</span>
                 </div>
+                <div class="home-three-sales">销量:{{totalSales}}</div>
+                <div class="home-three-top">
+                    <img class="top-img" src="../images/fire.png" alt="">
+                    <span>{{plus @index}}</span>
+                </div>
             </div>
         </a>
         {{/productdetail}}
