--- a/html/index.html
+++ b/html/index.html
@@ -145,7 +145,7 @@
         {{#productdetail}}
         <div class="dis-list-box">
             <div class="dis-shop-img">
-                <img src="../img/lazy.gif" data-src="{{mainImageUrl}}" alt="">
+                <img src="../images/lazy.gif" data-src="{{mainImageUrl}}" alt="">
             </div>
             <div class="dis-list-content">
                 <div class="dis-shop-detail">
