1.推广中心的title改为 友惠云店 2.二级页面，都增加一个返回 3.我的培训老师去掉 4.增加一个推广明细 5.销售管理改成卖家管理

--- a/html/extension.html
+++ b/html/extension.html
@@ -15,7 +15,7 @@
 <body>
 <!--头-->
 <header class="aui-bar aui-bar-nav" id="aui-header">
-    <div class="aui-title">东东推</div>
+    <div class="aui-title">友惠云店</div>
 </header>
 <section class="my-index-box" id="page-box">
     <script type="text/x-handlebars-template" id="page-template">
