--- a/html/my.html
+++ b/html/my.html
@@ -79,7 +79,7 @@
                 </li>
                 <li>
                     <a href="transuccess.html" class="display-box">
-                        销售管理
+                        卖家管理
                     </a>
                 </li>
                 <li>
@@ -88,8 +88,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="teacher.html" class="display-box">
-                        我的培训老师
+                    <a href="javascript:;" class="display-box">
+                        推广明细
                     </a>
                 </li>
                 <li>
