--- a/html/transuccess.html
+++ b/html/transuccess.html
@@ -17,7 +17,7 @@
     <div class="aui-col-xs-3 my-col-xs-3 back-member">
         <i class="aui-iconfont aui-icon-left"></i>
     </div>
-    <div class="aui-title my-aui-title">销售管理</div>
+    <div class="aui-title my-aui-title">卖家管理</div>
 </header>
 <!--主体部分-->
 <section class="comm-box">
