--- a/html/commodity.html
+++ b/html/commodity.html
@@ -83,12 +83,12 @@
                             <span class="shop-list-name">{{name}}</span>
                         </div>
                         <div class="dis-price">
-                            <span>￥{{productPrice}}</span>
-                            <span>￥{{productOrginPrice}}</span>
+                            <span>优惠价{{productPrice}}</span>
+                            <span>原价{{productOrginPrice}}</span>
                         </div>
                         <div class="dis-evaluate">
-                            <span>{{totalFeedback}}评价</span>
-                            <span>好评 <span>{{percentFeedback}}%</span></span>
+                            <span>赚{{marketProfit}}</span>
+                            <span>佣金率 <span>{{marketProfitPercent}}</span></span>
                         </div>
                         <div class="dis-del-sale">
                             <div class="dis-del"></div>
