--- a/html/commodity.html
+++ b/html/commodity.html
@@ -83,11 +83,11 @@
                             <span class="shop-list-name">{{name}}</span>
                         </div>
                         <div class="dis-price">
-                            <span>优惠价{{productPrice}}</span>
-                            <span>原价{{productOrginPrice}}</span>
+                            <span>优惠价:{{productPrice}}元</span>
+                            <span>原价:{{productOrginPrice}}元</span>
                         </div>
                         <div class="dis-evaluate">
-                            <span>赚{{marketProfit}}</span>
+                            <span>赚:{{marketProfit}}元</span>
                             <span>佣金率 <span>{{marketProfitPercent}}</span></span>
                         </div>
                         <div class="dis-del-sale">
