--- a/html/my.html
+++ b/html/my.html
@@ -79,7 +79,7 @@
                 </li>
                 <li>
                     <a href="transuccess.html" class="display-box">
-                        卖家管理
+                        买家管理
                     </a>
                 </li>
                 <li>
