--- a/html/myShop.html
+++ b/html/myShop.html
@@ -24,7 +24,7 @@
     <div id="header-box">
         <script type="text/x-handlebars-template" id="mine-info-template">
             {{#user}}
-            <img class="user-photo" src="../images/user.jpg" alt="">
+            <img class="user-photo" src="{{userHeadImg}}" alt="">
             <div class="member-info">
                 <div>{{userNickName}}</div>
                 <div>已经售{{totalProduct}}件商品</div>
