增加分享QQ，微博，修复bug

--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -197,15 +197,24 @@
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
                 </li>
-                <!--<li class="no-border">-->
-                <!--<div class="wxmass-item-list-img">-->
-                <!--<img src="../images/sends3.png" alt="">-->
-                <!--</div>-->
-                <!--<span>收藏</span>-->
-                <!--<div class="aui-col-xs-3 wxmass-col-xs-3">-->
-                <!--<i class="aui-iconfont aui-icon-right"></i>-->
-                <!--</div>-->
-                <!--</li>-->
+                <li class="share-QQ">
+                    <div class="wxmass-item-list-img">
+                        <img src="../images/sends2.png" alt="">
+                    </div>
+                    <span>分享到QQ</span>
+                    <div class="aui-col-xs-3 wxmass-col-xs-3">
+                        <i class="aui-iconfont aui-icon-right"></i>
+                    </div>
+                </li>
+                <li class="share-weibo">
+                    <div class="wxmass-item-list-img">
+                        <img src="../images/sends2.png" alt="">
+                    </div>
+                    <span>分享到微博</span>
+                    <div class="aui-col-xs-3 wxmass-col-xs-3">
+                        <i class="aui-iconfont aui-icon-right"></i>
+                    </div>
+                </li>
             </ul>
         </section>
     </section>
