--- a/html/notice.html
+++ b/html/notice.html
@@ -24,7 +24,8 @@
 </section>
 <script type="text/x-handlebars-template" id="notice-detail-template">
     {{#this}}
-        {{content}}}
+    <h1 id="notice-title">{{title}}</h1>
+        {{{content}}}
     {{/this}}
 </script>
 <script src="../js/jquery-3.0.0.min.js"></script>
