--- a/html/teamadmin.html
+++ b/html/teamadmin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>团队管理</title>
+    <title>邀请记录</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/aui.2.0.css">
@@ -16,7 +16,7 @@
     <div class="aui-col-xs-3 my-col-xs-3">
         <i class="aui-iconfont aui-icon-left"></i>
     </div>
-    <div class="aui-title my-aui-title">团队管理</div>
+    <div class="aui-title my-aui-title">邀请记录</div>
 </header>
 <nav>
     <div class="member-info-entry">
