--- a/html/my.html
+++ b/html/my.html
@@ -52,15 +52,14 @@
                     <li class="li-bor">
                         <div class="three"></div>
                         <div>
-                            <span class="ab e9-color">待收益</span><br>
-                            <span>{{preProfit}}</span>
+                            <span class="ab e9-color">推广明细</span><br>
+                            <!--<span>{{preProfit}}</span>-->
                         </div>
                     </li>
                     <li>
                         <div class="four"></div>
                         <div>
-                            <span class="cd e9-color">累计收益</span><br>
-                            <span>{{money}}</span>
+                            <span class="cd e9-color">入驻邀请</span><br>
                         </div>
 
                     </li>
@@ -84,25 +83,25 @@
                 </li>
                 <li>
                     <a href="teamadmin.html" class="display-box">
-                        团队管理
+                        邀请记录
                     </a>
                 </li>
-                <li>
+                <!--<li>
                     <a href="javascript:;" class="display-box">
                         推广明细
                     </a>
-                </li>
+                </li>-->
                 <li>
                     <a href="aboutus.html" class="display-box">
                         关于我们
                     </a>
                 </li>
-                <li class="bind-tel-box">
+                <!--<li class="bind-tel-box">
                     <a href="bindingtel.html" class="display-box">
                         <i>绑定手机号</i>
                         <span style="padding-left: 5rem;">{{userPhone}}</span>
                     </a>
-                </li>
+                </li>-->
                 <li>
                     <a href="set.html" class="display-box">
                         设置
