--- a/html/myShop.html
+++ b/html/myShop.html
@@ -142,15 +142,24 @@
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
                 </li>
-                <!--<li class="no-border">
+                <li class="share-QQ">
                     <div class="wxmass-item-list-img">
-                        <img src="../images/sends3.png" alt="">
+                        <img src="../images/sends2.png" alt="">
                     </div>
-                    <span>收藏</span>
+                    <span>分享到QQ</span>
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
-                </li>-->
+                </li>
+                <li class="share-weibo">
+                    <div class="wxmass-item-list-img">
+                        <img src="../images/sends2.png" alt="">
+                    </div>
+                    <span>分享到微博</span>
+                    <div class="aui-col-xs-3 wxmass-col-xs-3">
+                        <i class="aui-iconfont aui-icon-right"></i>
+                    </div>
+                </li>
             </ul>
         </section>
 
