--- a/html/selected.html
+++ b/html/selected.html
@@ -121,15 +121,24 @@
                     <i class="aui-iconfont aui-icon-right"></i>
                 </div>
             </li>
-            <!--<li class="no-border">-->
-                <!--<div class="wxmass-item-list-img">-->
-                    <!--<img src="../images/sends3.png" alt="">-->
-                <!--</div>-->
-                <!--<span>收藏</span>-->
-                <!--<div class="aui-col-xs-3 wxmass-col-xs-3">-->
-                    <!--<i class="aui-iconfont aui-icon-right"></i>-->
-                <!--</div>-->
-            <!--</li>-->
+            <li class="share-QQ">
+                <div class="wxmass-item-list-img">
+                    <img src="../images/sends2.png" alt="">
+                </div>
+                <span>分享到QQ</span>
+                <div class="aui-col-xs-3 wxmass-col-xs-3">
+                    <i class="aui-iconfont aui-icon-right"></i>
+                </div>
+            </li>
+            <li class="share-weibo">
+                <div class="wxmass-item-list-img">
+                    <img src="../images/sends2.png" alt="">
+                </div>
+                <span>分享到微博</span>
+                <div class="aui-col-xs-3 wxmass-col-xs-3">
+                    <i class="aui-iconfont aui-icon-right"></i>
+                </div>
+            </li>
         </ul>
     </section>
 
@@ -260,6 +269,13 @@
 
                     $('.share-firends-quan').one('click',function (event) {
                         getShareData(event,'2');
+                    });
+
+                    $('.share-QQ').bind('click',function (event) {
+                        getShareData(event, '3');
+                    });
+                    $('.share-weibo').bind('click',function (event) {
+                        getShareData('event','4');
                     });
 
                     function getShareData(event, type) {
