--- a/html/index.html
+++ b/html/index.html
@@ -156,6 +156,10 @@
                     <span>￥{{productPrice}}</span>
                     <span>￥{{productOrginPrice}}</span>
                 </div>
+                <div class="dis-evaluate">
+                    <span>赚:{{marketProfit}}元</span>
+                    <span>佣金率 <span>{{marketProfitPercent}}</span></span>
+                </div>
                 <div class="miaosha">
                     {{#../skus}}
                     <span class="seckill-count">剩余{{stock}}件</span>
