--- a/html/my.html
+++ b/html/my.html
@@ -179,6 +179,9 @@
                     location.href = 'generalize_detail.html';
                 });
                 $('.li-center').bind('click',goEenterInvite);
+                /*$('.li-center').bind('click',function () {
+                    location.href = 'invite_enter.html';
+                });*/
 
             } else if (data.result == 'login') {
                 alert('登录已过期，请重新登录');
