--- a/html/notice.html
+++ b/html/notice.html
@@ -13,7 +13,7 @@
 <body>
 
 <header class="aui-bar aui-bar-nav" id="aui-header">
-    <div class="aui-col-xs-3 my-col-xs-3">
+    <div class="aui-col-xs-3 my-col-xs-3 go-back">
         <i class="aui-iconfont aui-icon-left"></i>
     </div>
     <div class="aui-title my-aui-title">平台公告</div>
@@ -31,7 +31,6 @@
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/config.js"></script>
-<script src="../js/common.js"></script>
 <script src="../js/function.js"></script>
 <script src="../js/notice.js"></script>
 
