取消分享QQ，微博

--- a/html/commodity.html
+++ b/html/commodity.html
@@ -136,7 +136,7 @@
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
                 </li>
-                <li class="share-QQ">
+                <!--<li class="share-QQ">
                     <div class="wxmass-item-list-img">
                         <img src="../images/sends2.png" alt="">
                     </div>
@@ -153,7 +153,7 @@
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </section>
     </section>
