--- a/html/myShop.html
+++ b/html/myShop.html
@@ -142,7 +142,7 @@
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
                 </li>
-                <li class="share-QQ">
+                <!--<li class="share-QQ">
                     <div class="wxmass-item-list-img">
                         <img src="../images/sends2.png" alt="">
                     </div>
@@ -159,7 +159,7 @@
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </section>
 
