修改我的店铺商品数量

--- a/html/myShop.html
+++ b/html/myShop.html
@@ -38,7 +38,7 @@
             <script type="text/x-handlebars-template" id="my-select-template">
                 <select class="dis-shop-type">
                     {{#each this}}
-                    <option value="{{id}}">{{name}}({{count}})</option>
+                    <option value="{{id}}">{{name}}</option>
                     {{/each}}
                     <!--<option value="男装">女装(20)</option>-->
                 </select>
