--- a/html/extension.html
+++ b/html/extension.html
@@ -94,7 +94,7 @@
 <footer class="aui-bar aui-bar-tab" id="footer">
     <a href="index.html">
         <div class="aui-bar-tab-item" tapmode>
-            <i class="aui-iconfont aui-icon-home"></i>
+            <img class="footer-icon-img" src="../images/JD_click.png" alt="">
             <div class="aui-bar-tab-label">首页</div>
         </div>
     </a>
